--- a/todolist/task/templates/task/todolist.html
+++ b/todolist/task/templates/task/todolist.html
@@ -50,26 +50,28 @@
                             </select>
                         </div>
                         <div class="to-dos" id="toDoContainer">
-                            {% for task in tasks %}
-                                <div class="item">
-                                    <div class="content">
-                                        <div class="checkbox-wrapper-12">
-                                            <div class="cbx">
-                                                <input type="checkbox" id="cbx-12">
-                                                <label for="cbx-12"></label>
-                                                <svg fill="none" viewBox="0 0 15 14" height="14" width="15">
-                                                    <path d="M2 8.36364L6.23077 12L13 2"></path>
-                                                </svg>
+                            {% if request.user.is_authenticated%}
+                                {% for task in tasks %}
+                                    <div class="item">
+                                        <div class="content">
+                                            <div class="checkbox-wrapper-12">
+                                                <div class="cbx">
+                                                    <input type="checkbox" id="cbx-12">
+                                                    <label for="cbx-12"></label>
+                                                    <svg fill="none" viewBox="0 0 15 14" height="14" width="15">
+                                                        <path d="M2 8.36364L6.23077 12L13 2"></path>
+                                                    </svg>
+                                                </div>
                                             </div>
+                                            <input class="text" type="text" readonly="readonly" value="{{ task.title }}">
                                         </div>
-                                        <input class="text" type="text" readonly="readonly" value="{{ task.title }}">
+                                        <div class="actions">
+                                            <button class="edit button button-success" type="button">Edit</button>
+                                            <a href="{% url 'delete_task' task.id %}" class="delete button button-danger fa fa-trash" style="background: url({% static 'images/eliminar.png' %}) 0% 0% / cover no-repeat;"></a>
+                                        </div>
                                     </div>
-                                    <div class="actions">
-                                        <button class="edit button button-success" type="button">Edit</button>
-                                        <a href="{% url 'delete_task' task.id %}" class="delete button button-danger fa fa-trash" style="background: url({% static 'images/eliminar.png' %}) 0% 0% / cover no-repeat;"></a>
-                                    </div>
-                                </div>
-                            {% endfor %}
+                                {% endfor %}
+                            {% endif %}
                         </div>
                     </div>
                 </main>
